--- a/config_example.json
+++ b/config_example.json
@@ -1,5 +1,6 @@
 {
   "groups": [
+    21201,
     21213,
     21214,
     21215,
@@ -7,30 +8,153 @@
   ],
   "rooms": {
     "lec": [
-      2128,
+      118,
+      304,
       402,
       1274,
-      304
+      2128,
+      3107
     ],
     "lab": [
-      3212,
+      306,
+      1156,
+      2213,
       2221,
-      4218,
-      306
+      3212,
+      4218
     ],
     "prac": [
-      2253,
-      3218,
-      3120,
-      1311,
-      2266,
-      1156,
       1155,
-      4220,
-      3317
+      1156,
+      1311,
+      1326,
+      2253,
+      2266,
+      3120,
+      3212,
+      3218,
+      3317,
+      4220
     ]
   },
   "plan": [
+    {
+      "teacher": "maryasov",
+      "subject": "methods_of_translation_and_compilation",
+      "subject_type": "lec",
+      "groups": [
+        21201
+      ],
+      "times_in_a_week": 1
+    },
+    {
+      "teacher": "gorchakov",
+      "subject": "electronics",
+      "subject_type": "lec",
+      "groups": [
+        21201
+      ],
+      "times_in_a_week": 1
+    },
+    {
+      "teacher": "gorchakov",
+      "subject": "electronics",
+      "subject_type": "lab",
+      "groups": [
+        21201
+      ],
+      "times_in_a_week": 1
+    },
+    {
+      "teacher": "ostapenko",
+      "subject": "computational_math",
+      "subject_type": "prac",
+      "groups": [
+        21201
+      ],
+      "times_in_a_week": 1
+    },
+    {
+      "teacher": "ostapenko",
+      "subject": "computational_math",
+      "subject_type": "lec",
+      "groups": [
+        21201
+      ],
+      "times_in_a_week": 1
+    },
+    {
+      "teacher": "psychology",
+      "subject": "computational_math",
+      "subject_type": "lec",
+      "groups": [
+        21201
+      ],
+      "times_in_a_week": 1
+    },
+    {
+      "teacher": "andreev",
+      "subject": "networks",
+      "subject_type": "lab",
+      "groups": [
+        21201
+      ],
+      "times_in_a_week": 1
+    },
+    {
+      "teacher": "ippolitov",
+      "subject": "networks",
+      "subject_type": "lec",
+      "groups": [
+        21201
+      ],
+      "times_in_a_week": 1
+    },
+    {
+      "teacher": "grishkin",
+      "subject": "operating_systems",
+      "subject_type": "lab",
+      "groups": [
+        21201
+      ],
+      "times_in_a_week": 1
+    },
+    {
+      "teacher": "pischik",
+      "subject": "databases",
+      "subject_type": "lec",
+      "groups": [
+        21201
+      ],
+      "times_in_a_week": 1
+    },
+    {
+      "teacher": "rutman",
+      "subject": "operating_systems",
+      "subject_type": "lec",
+      "groups": [
+        21201
+      ],
+      "times_in_a_week": 1
+    },
+    {
+      "teacher": "zligostev",
+      "subject": "methods_of_translation_and_compilation",
+      "subject_type": "prac",
+      "groups": [
+        21201
+      ],
+      "times_in_a_week": 1
+    },
+    {
+      "teacher": "zhidkov",
+      "subject": "databases",
+      "subject_type": "lab",
+      "groups": [
+        21201
+      ],
+      "times_in_a_week": 1
+    },
     {
       "teacher": "permyakov",
       "subject": "cybersecurity",
@@ -290,57 +414,111 @@
   ],
   "constraints": [
     {
-      "name": "teachers_overlapping",
-      "args": [
-        "permyakov",
-        "nedelko"
-      ]
+      "name": "groups_overlapping",
+      "args": {
+        "group_1": 21215,
+        "group_2": 21201
+      }
+    },
+    {
+      "name": "groups_overlapping",
+      "args": {
+        "group_1": 21215,
+        "group_2": 21216
+      }
     },
     {
       "name": "teachers_overlapping",
-      "args": [
-        "balabanov",
-        "terenteva"
-      ]
+      "args": {
+        "teacher_1": "permyakov",
+        "teacher_2": "nedelko"
+      }
     },
     {
       "name": "teachers_overlapping",
-      "args": [
-        "balabanov",
-        "sitnov"
-      ]
+      "args": {
+        "teacher_1": "balabanov",
+        "teacher_2": "terenteva"
+      }
     },
     {
       "name": "teachers_overlapping",
-      "args": [
-        "terenteva",
-        "vaskevich"
-      ]
+      "args": {
+        "teacher_1": "balabanov",
+        "teacher_2": "sitnov"
+      }
+    },
+    {
+      "name": "teachers_overlapping",
+      "args": {
+        "teacher_1": "terenteva",
+        "teacher_2": "vaskevich"
+      }
     },
     {
       "name": "number_of_teaching_days",
-      "args": [
-        {
-          "teacher_name": "kuzin",
-          "number": 1
-        },
-        {
-          "teacher_name": "bukshev",
-          "number": 1
-        },
-        {
-          "teacher_name": "terenteva",
-          "number": 1
-        },
-        {
-          "teacher_name": "vaskevich",
-          "number": 1
-        },
-        {
-          "teacher_name": "balabanov",
-          "number": 1
-        }
-      ]
+      "args": {
+        "teacher": "kuzin",
+        "number": 1
+      }
+    },
+    {
+      "name": "number_of_teaching_days",
+      "args": {
+        "teacher": "bukshev",
+        "number": 1
+      }
+    },
+    {
+      "name": "number_of_teaching_days",
+      "args": {
+        "teacher": "terenteva",
+        "number": 1
+      }
+    },
+    {
+      "name": "number_of_teaching_days",
+      "args": {
+        "teacher": "vaskevich",
+        "number": 1
+      }
+    },
+    {
+      "name": "number_of_teaching_days",
+      "args": {
+        "teacher": "balabanov",
+        "number": 1
+      }
+    },
+    {
+      "name": "forbidden_period_for_teacher",
+      "args": {
+        "day": 1,
+        "period": 1,
+        "teacher": "balabanov"
+      }
+    },
+    {
+      "name": "forbidden_period_for_group",
+      "args": {
+        "day": 6,
+        "period": 7,
+        "group": 21215
+      }
+    },
+    {
+      "name": "forbidden_day_for_teacher",
+      "args": {
+        "day": 2,
+        "teacher": "balabanov"
+      }
+    },
+    {
+      "name": "forbidden_day_for_group",
+      "args": {
+        "day": 3,
+        "group": 21215
+      }
     }
   ]
 }
