--- a/src/resources/config_example.json
+++ b/src/resources/config_example.json
@@ -521,7 +521,9 @@
         "day": 5,
         "period": 5,
         "room": 4220,
-        "groups": [21213]
+        "groups": [
+          21213
+        ]
       }
     },
     {
@@ -532,7 +534,12 @@
         "day": 1,
         "period": 7,
         "room": 1274,
-        "groups": [21215, 21214, 21216, 21213]
+        "groups": [
+          21215,
+          21214,
+          21216,
+          21213
+        ]
       }
     }
   ]
