--- a/src/resources/config_example.json
+++ b/src/resources/config_example.json
@@ -414,13 +414,6 @@
   ],
   "constraints": [
     {
-      "name": "groups_overlapping",
-      "args": {
-        "group_1": 21215,
-        "group_2": 21201
-      }
-    },
-    {
       "name": "teachers_overlapping",
       "args": {
         "teacher_1": "permyakov",
@@ -538,6 +531,205 @@
           21215,
           21214,
           21216,
+          21213
+        ]
+      }
+    },
+    {
+      "name": "exact_time",
+      "args": {
+        "teacher": "fizruk",
+        "subject": "physical_culture_lec",
+        "day": 1,
+        "period": 1,
+        "room": 1274,
+        "groups": [
+          21215,
+          21214,
+          21216,
+          21213
+        ]
+      }
+    },
+    {
+      "name": "exact_time",
+      "args": {
+        "teacher": "fizruk",
+        "subject": "physical_culture_lec",
+        "day": 1,
+        "period": 2,
+        "room": 1274,
+        "groups": [
+          21215,
+          21214,
+          21216,
+          21213
+        ]
+      }
+    },
+    {
+      "name": "exact_time",
+      "args": {
+        "teacher": "fizruk",
+        "subject": "physical_culture_lec",
+        "day": 1,
+        "period": 3,
+        "room": 1274,
+        "groups": [
+          21215,
+          21214,
+          21216,
+          21213
+        ]
+      }
+    },
+    {
+      "name": "exact_time",
+      "args": {
+        "teacher": "fizruk",
+        "subject": "physical_culture_lec",
+        "day": 1,
+        "period": 4,
+        "room": 1274,
+        "groups": [
+          21215,
+          21214,
+          21216,
+          21213
+        ]
+      }
+    },
+    {
+      "name": "exact_time",
+      "args": {
+        "teacher": "fizruk",
+        "subject": "physical_culture_lec",
+        "day": 1,
+        "period": 5,
+        "room": 1274,
+        "groups": [
+          21215,
+          21214,
+          21216,
+          21213
+        ]
+      }
+    },
+    {
+      "name": "exact_time",
+      "args": {
+        "teacher": "fizruk",
+        "subject": "physical_culture_lec",
+        "day": 1,
+        "period": 6,
+        "room": 1274,
+        "groups": [
+          21215,
+          21214,
+          21216,
+          21213
+        ]
+      }
+    },
+    {
+      "name": "exact_time",
+      "args": {
+        "teacher": "fizruk",
+        "subject": "physical_culture_lec",
+        "day": 2,
+        "period": 1,
+        "room": 1274,
+        "groups": [
+          21215,
+          21214,
+          21216,
+          21213
+        ]
+      }
+    },
+    {
+      "name": "exact_time",
+      "args": {
+        "teacher": "fizruk",
+        "subject": "physical_culture_lec",
+        "day": 2,
+        "period": 2,
+        "room": 1274,
+        "groups": [
+          21215,
+          21214,
+          21216,
+          21213
+        ]
+      }
+    },
+    {
+      "name": "exact_time",
+      "args": {
+        "teacher": "fizruk",
+        "subject": "physical_culture_lec",
+        "day": 2,
+        "period": 3,
+        "room": 1274,
+        "groups": [
+          21215,
+          21214,
+          21216,
+          21213
+        ]
+      }
+    },
+    {
+      "name": "exact_time",
+      "args": {
+        "teacher": "ippolitov",
+        "subject": "networks_lec",
+        "day": 1,
+        "period": 1,
+        "room": 3107,
+        "groups": [
+          21201
+        ]
+      }
+    },
+    {
+      "name": "exact_time",
+      "args": {
+        "teacher": "sitnov",
+        "subject": "ctf_lec",
+        "day": 2,
+        "period": 4,
+        "room": 304,
+        "groups": [
+          21213,
+          21214,
+          21215,
+          21216
+        ]
+      }
+    },
+    {
+      "name": "exact_time",
+      "args": {
+        "teacher": "zhidkov",
+        "subject": "databases_lab",
+        "day": 1,
+        "period": 2,
+        "room": 2221,
+        "groups": [
+          21201
+        ]
+      }
+    },
+    {
+      "name": "exact_time",
+      "args": {
+        "teacher": "terenteva",
+        "subject": "english_prac",
+        "day": 4,
+        "period": 1,
+        "room": 2266,
+        "groups": [
           21213
         ]
       }
